<resources>
    <string name="app_name">Tweety</string>
    <string name="tv_keyword">Keyword: %s</string>
    <string name="title_activity_message">MessageActivity</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_graph">GraphActivity</string>

    <string name="occurrences_per_sec">Occurrences per second: %d</string>

    <string name="pref_keyword">prefKeyword</string>
    <string name="pref_num_occurrences">prefOccurrences</string>
    <string name="pref_default_keyword">tap to change</string>
    <string name="status_user">\@%s</string>
    <string name="button_stop">stop</string>
    <string name="button_start">start</string>
    <string name="clear_history">clear</string>
    <string name="username_loading">Loading…</string>
    <string name="status_running">Running</string>
    <string name="notification_stream_message">Stream connected, listening for messages. Touch to stop</string>
    <string name="notification_stream_occurrences">Stream connected. Listening for occurrences of \"%s\". Touch to view</string>
    <string name="notification_title">TwitterStream</string>
    <string name="notification_title_error">TwitterStream Error</string>

    <string name="filler_text">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
        Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
        Donec pede justo, fringilla vel, aliquet nec, vulputate
    </string>

    <string name="history_keyword">Keyword: %s</string>
    <string name="history_num_occurrences">Occurrences: %d</string>

    <string name="pref_show_retweet_streaming_key">show_rt</string>
    <string name="pref_show_retweet_streaming_label">Show retweets</string>
    <string name="pref_show_retweet_streaming_true">Retweets will be included</string>
    <string name="pref_show_retweet_streaming_false">Retweets will be excluded</string>

    <string name="pref_english_only_key">english_only</string>
    <string name="pref_english_only_label">Restrict to English</string>
    <string name="pref_english_only_true">Only English statuses will be shown</string>
    <string name="pref_english_only_false">Statuses will be shown in any language</string>

    <string name="pref_color_retweets_key">color_retweets</string>
    <string name="pref_color_retweets_label">Color retweets</string>
    <string name="pref_color_retweets_summary">Show retweets in a different color</string>

    <string name="pref_choose_color_key">choose_color</string>
    <string name="pref_default_retweet_color">#085100</string>

    <string name="pref_show_retweet_status_key">show_status_rt</string>
    <string name="pref_show_retweet_status_label">Show retweets</string>
    <string name="pref_show_retweet_status_true">Retweets will be included when searching a user\'s profile</string>
    <string name="pref_show_retweet_status_false">Retweets will be excluded when searching a user\'s profile</string>

    <string name="pref_logout_key">logout_key</string>
    <string name="pref_sign_in_key">sign_in</string>

    <string name="pref_auth">Auth</string>
    <string name="pref_token">token</string>
    <string name="pref_token_secret">tokenSecret</string>

    <string name="recycler_view_empty">No tweets yet</string>
    <string name="empty_graph">Looks like you don\'t have any data to graph</string>
    <string name="empty_history">Looks like you don\'t have any data</string>
    <string name="view_profile">View Profile</string>
    <string name="dialog_keyword_hint">Keyword</string>
    <string name="messaging">Messaging</string>
    <string name="occurrences">Occurrences</string>
    <string name="login_dialog_message">In order to use most features of this app, you\'ll need to log in to your Twitter account.</string>
    <string name="default_user_search_text">Tap here to enter a username</string>
    <string name="default_keyword">Tap to change</string>
    <string name="button_search">Search</string>

    <string name="error_user_not_exists">Sorry, that page does not exist</string>
    <string name="error_private_account">Only confirmed followers have access to \@%s\'s Tweets</string>
    <string name="empty_statuses">No statuses to show</string>
    <string name="initial_status_text">Statuses will appear here</string>
    <string name="date_format">EEE, MMMM d, yyyy hh:mm aaa</string>
    <string name="not_logged_in_message">You are not logged in</string>

    <string name="content_authority">com.camtech.android.tweetbot</string>
    <string name="error_default">Error retrieving timeline</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="stream_error_420">Woah there, you\'ve made a lot of requests recently. Please wait 2 minutes before trying again</string>
    <string name="stream_unknown_error">An unexpected error occurred</string>
    <string name="pref_change_retweet_color_label">Change retweet color</string>

    <string name="btn_seconds_remaining">Seconds left: %d</string>

</resources>
