<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOccurrences"
    android:orientation="horizontal"
    tools:context="com.camtech.android.tweetbot.fragments.OccurrencesFragment">


    <ImageView
        android:id="@+id/iv_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_graph" />

    <TextView
        android:id="@+id/tv_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/tv_keyword"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:text="KeyWord: Kendrick Lamar" />

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:src="@drawable/ic_settings" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occurrences"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_num_occurrences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="60sp"
            tools:text="30" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_start_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@color/colorOccurrences"
        android:text="@string/button_start"
        android:textColor="#FFFFFF" />

</RelativeLayout>
