<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_search_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_user_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/default_user_search_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:layout_margin="16dp"
        android:id="@+id/tv_empty_statuses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/error_default"
        android:textColor="#fff"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_initial_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/initial_status_text"
        android:textColor="#ffffff"
        android:textSize="20sp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_status_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_user_search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="67dp"
            android:src="@drawable/ic_close_black_24dp"
            android:visibility="gone"
            app:backgroundTint="#FFFFFF"
            app:fabSize="mini"
            tools:visibility="visible" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_scroll_to_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_arrow_downward_black_24dp"
            android:visibility="gone"
            app:backgroundTint="#FFFFFF"
            app:fabSize="mini"
            tools:visibility="visible" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_scroll_to_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_arrow_upward_black_24dp"
            android:visibility="invisible"
            app:backgroundTint="#FFFFFF"
            app:fabSize="mini" />

    </FrameLayout>

    <Button
        android:id="@+id/bt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@color/colorOccurrences"
        android:text="@string/button_search"
        android:textColor="#FFFFFF"
        tools:visibility="invisible" />

</RelativeLayout>